fixed display play all button, and profile name